--- a/css/Header.css
+++ b/css/Header.css
@@ -12,8 +12,11 @@
 :root{
     --nav-text-color: rgba(85, 85, 85, 0.8); 
     --underline-color:rgb(50, 50, 50);
+    --search-text-color:#ffffff;
 }
+ 
 
+/* header */
 .header-container{
     /* border: 5px solid red; */
     display: grid;
@@ -27,6 +30,12 @@
 }
 
 
+/* .show class  */
+#search-input .show{
+    display: block;
+    width: 200px;
+
+}
 
 .logo img{
     width: 100%;
@@ -43,6 +52,8 @@
     cursor: pointer;
 }
 
+
+/* NAV */
 .nav-list{
     /* border: 10px solid yellow; */
     display: flex;
@@ -92,19 +103,53 @@ nav .nav-list {
 }
 
 
+/* Icons */
 
 
 .icons{
     width: 100%;
+    gap: 10px;
+
 }
 
+.icons a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+ }
+ 
+ .icons img{
+    width: 90%;
+ }
+ 
+
+
+#searchBar {
+    display: none;
+    background-color: var(--nav-text-color);
+    font-size: 12pt;
+    font-weight: 100;
+    margin-right: 10px;
+    padding: .25em .75em;
+    max-width: 130px;
+    text-align: right;
+    border: 1px solid;
+    border-radius: 28px;
+    font-weight: 400;
+    color:var(--search-text-color) ;
+
+  }
+  #toggle-search {
+    display: f;
+  }
 
 .menu, label{
     display: none; 
 }
 
 
-/* @media */
+/* @media  responsive css*/
 
 @media(max-width : 768px){
 
@@ -166,34 +211,37 @@ nav .nav-list {
 
 
     .icons {
-        width: 150%;
-        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-top: 15px;
+
     }
+
+    .icons img {
+      
+        width: 80%;
+        max-height: 30px; 
+      }
+      #searchBar {
+        order: -1; 
+        width: 100%; 
+        margin: 0 0 10px 0; 
+        display: none; 
+        text-align: left;
+      }
 
     .nav-list .nav-item a:nth-child(1){
         margin-top: 50px;
     }
 
 
-}
-
-
-.icons{
-     /* border: 3px solid brown; */
-     gap: 10px;
 
 
 }
 
-.icons a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
 
-.icons img{
-    width: 80%;
-}
 
 
