--- a/css/products.css
+++ b/css/products.css
@@ -24,7 +24,7 @@ body{
 
 .products-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,auto));
+    grid-template-columns: repeat(auto-fit, minmax(250px,250px));
     grid-gap: 50px;
     margin: 50px auto;
     max-width: 1240px;
