--- a/css/Header.css
+++ b/css/Header.css
@@ -110,6 +110,7 @@ nav .nav-list {
 .icons{
     width: 100%;
     gap: 10px;
+    position: relative;
 
 }
 
@@ -117,6 +118,8 @@ nav .nav-list {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;/* Prevents flex items from shrinking */
+    min-width: 30px; 
    
  }
  
@@ -133,10 +136,10 @@ nav .nav-list {
 #searchBar {
     display: none;
     background-color: var(--nav-text-color);
-    font-size: 12pt;
+    font-size: 10pt;
     font-weight: 100;
     margin-right: 10px;
-    padding: .25em .75em;
+    padding: .35em 2.5em;
     max-width: 130px;
     text-align: right;
     border: 1px solid;
@@ -153,6 +156,38 @@ nav .nav-list {
     display: none; 
 }
 
+/* result box */
+.resultBox {
+    display: none; 
+    position: absolute;
+    top: 100%;
+    left: 0;
+    font-size: 12px;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+    z-index: 1000; 
+    border-top: none;
+    
+}
+
+.resultBox ul {
+    
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+.resultBox li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.resultBox li:hover {
+    background-color: #eee;
+}
 
 /* @media  responsive css*/
 
