--- a/css/Header.css
+++ b/css/Header.css
@@ -10,6 +10,8 @@
 
 body{
     height: 100%;
+    
+    
 }
 
 /* define color using css variables */
@@ -249,12 +251,14 @@ nav .nav-list {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: block;
     
 }
 
 .resultBox li {
     padding: 10px;
     cursor: pointer;
+    
 }
 
 .resultBox li:hover {
