--- a/css/footer.css
+++ b/css/footer.css
@@ -6,16 +6,27 @@
     margin: 0;
     
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 .custom-footer-container {
     font-family: "Poppins", sans-serif;
     text-align: center;
     background-color: #e6e3e3fc;
     padding:  0;
+    display: flex;
+    flex-direction: column;
+    min-height: 25vh;
+
   }
   
   .footer .social-buttons {
-    margin: 0 auto;
+    
     padding: 30px 0;
+    margin-top: 50px;
   }
   
   .social-button {
@@ -42,6 +53,7 @@
     background-color: #cccaca40;
     padding: 10px;
     font-size: 16px;
+    margin-top: 25px;
   }
   
   .footer a {
